SERVER-4863 dynamically detect block-in-memory functionality (needed for Windows)