src/mongo/util/version.cpp
@@ -29,6 +29,7 @@
 #include "file.h"
 #include "ramlog.h"
 #include "../db/cmdline.h"
+#include "processinfo.h"
 
 #include <boost/filesystem/operations.hpp>
 
@@ -148,6 +149,13 @@ namespace mongo {
             warned = true;
         }
 
+        if ( !ProcessInfo::blockCheckSupported() ) {
+            log() << startupWarningsLog;
+            log() << "** NOTE: your operating system version does not support the method that MongoDB" << startupWarningsLog;
+            log() << "**       uses to detect impending page faults." << startupWarningsLog;
+            log() << "**       This may result in slower performance for certain use cases" << startupWarningsLog;
+            warned = true;
+        }
 #ifdef __linux__
         if (boost::filesystem::exists("/proc/vz") && !boost::filesystem::exists("/proc/bc")) {
             log() << startupWarningsLog;
